added price and address to the equipment items

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,10 @@
 
 en:
   hello: "Hello world"
+  product_price: "%{price} €"
+  number:
+    currency:
+      format:
+        format: "%n %u"
+        unit: "€"
+        precision: 2
